<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="info">Tap an NFC tag to connect&#8230;</string>
    <string name="app_name">UserNFC</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="noAccount">New to SmartPlug? Register here</string>
    <string name="register">Register New Account</string>
    <string name="hasAccount">Already has an account? Login here</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_babam">BabamActivity</string>
    <string name="title_activity_stats">StatsActivity</string>
	<string name="stats_link">Link to stats</string>
		
</resources>
